# cure

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: pythonpackage.yml
convention/: __init__.py
cure/: __init__.py  __version__.py  __version_data__.py  builder.py
tests/: test_asyncio.py  test_class_methods.py  test_decorator.py  test_errors.py  test_init.py  test_keywords.py  test_options.py  test_repr.py  test_snake_case.py  test_use_case.py  test_wrap.py
